# cplusplus-arbitrage

./: .gitignore  CMakeLists.txt  DISCLAIMER.md  GITHUB_PROFILE_README.md  README.md  TRUTH.md  dashboard_trader.cpp  demo_simulator.cpp  honest_arb.cpp  live_trader.cpp  polymarket_arb.cpp  stale_odds_trader.cpp
configs/: bot.json
docs/: DEEP_ARBITRAGE_ANALYSIS.md  FUNDING_DISPERSION_OPERATIONS.md  MULTI_EXCHANGE_ARBITRAGE.md  V2_ROADMAP.md  V2_TECHNICAL_DESIGN.md
include/arbitrage/: delta_neutral_enforcer.hpp  demo_trading_harness.hpp  exchange_mechanics.hpp  funding_arbitrage.hpp  funding_dispersion.hpp  funding_graph_optimizer.hpp  funding_settlement_engine.hpp  multi_exchange_scanner.hpp
include/common/: types.hpp
include/config/: config.hpp
include/core/: connection_health.hpp  degradation_manager.hpp  exposure_manager.hpp  kill_switch.hpp  reconciler.hpp  state_manager.hpp
include/execution/: execution_engine.hpp  order.hpp  paired_executor.hpp
include/market_data/: binance_client.hpp  order_book.hpp  polymarket_client.hpp  ws_client_base.hpp
include/persistence/: session_database.hpp  trade_ledger.hpp
include/position/: position_manager.hpp
include/risk/: risk_manager.hpp
include/strategy/: regime_filter.hpp  strategy_base.hpp  volatility_fair_value.hpp
include/ui/: terminal_ui.hpp
include/utils/: alerter.hpp  crypto.hpp  metrics.hpp  time_utils.hpp
src/: main.cpp
src/arbitrage/: multi_exchange_scanner.cpp
src/config/: config.cpp
src/core/: connection_health.cpp  degradation_manager.cpp  exposure_manager.cpp  kill_switch.cpp  reconciler.cpp  state_manager.cpp
src/execution/: execution_engine.cpp  order.cpp  paired_executor.cpp
src/market_data/: binance_client.cpp  order_book.cpp  polymarket_client.cpp
src/persistence/: session_database.cpp  trade_ledger.cpp
src/position/: position_manager.cpp
src/risk/: risk_manager.cpp
src/strategy/: regime_filter.cpp  strategy_base.cpp  underpricing_strategy.cpp  volatility_fair_value.cpp
src/tools/: replay_tool.cpp
src/ui/: terminal_ui.cpp
src/utils/: alerter.cpp  crypto.cpp  metrics.cpp  time_utils.cpp
tests/: test_fee_calculation.cpp  test_funding_dispersion.cpp  test_funding_settlement.cpp  test_order_book.cpp  test_risk_manager.cpp  test_session_database.cpp  test_underpricing.cpp
